--- a/test/test3.html
+++ b/test/test3.html
@@ -11,16 +11,16 @@
                     <h1>105k</h1>
                     <h2>Analysis elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua felicitis.</h2>
                 </div>
-                <div class="icon002">
-                    <svg class="lnr-arrow-right-circle"><use xlink:href="#lnr-arrow-right-circle"></use></svg>
+                <div class="icon002 ">
+                    <span class="lnr lnr-arrow-right-circle"></span>
                 </div>
             </div>
             <div class="box003">
-                <div class="text0002">
+                <div class="text0002 ">
                     <h1>Mobile app</h1>
                 </div>
                 <div class="icon0002">
-                    <svg class="lnr-arrow-right-circle"><use xlink:href="#lnr-arrow-right-circle"></use></svg>
+                    <span class="lnr lnr-arrow-right-circle"></span>
                 </div>
             </div>
         </div>
